--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.9.0",
+    "@sidebase/nuxt-auth": "^0.10.0",
+    "next-auth": "~4.21.1",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
     "vue": "latest",
