--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,8 @@
-Django
-djangorestframework
+Django==5.0
+djangorestframework==3.14.0
+django-cors-headers==4.3.1
+psycopg2-binary==2.9.9
+django-storages==1.14.2
+boto3==1.34.0
+gunicorn==21.2.0
+whitenoise==6.6.0
