--- a/nginx.conf
+++ b/nginx.conf
@@ -59,13 +59,18 @@ server {
     # Frontend routes - serve static files
     location / {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ @fallback;
         
         # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
+    }
+    
+    # Fallback for SPA routes - serve index.html if it exists, otherwise return 404
+    location @fallback {
+        try_files /index.html =404;
     }
     
     # Health check endpoint
